Last Development Update!
fixing the ui, add manual pumping functionality, etc!!

--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://fauzi:Fauzi.231104@cluster0.sq2xp3s.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://fauzi:iaekelar@cluster0.mnxrdov.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
