--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://fauzi:iaekelar@cluster0.mnxrdov.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://fauzi:iaekelar@cluster0.mnxrdov.mongodb.net/?retryWrites=true&w=majority&tls=true
