--- a/.env.local
+++ b/.env.local
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://fauzi:iaekelar@cluster0.mnxrdov.mongodb.net/?retryWrites=true&w=majority&tls=true
+JWT_SECRET=bismillahiaekelarplease2025
+API_KEY=smart-garden-2023
